# Morse

./: .env.exemple  .gitignore  README.md  docker-compose.yml
morse-api/: Cargo.toml  Dockerfile
morse-api/src/: database.rs  main.rs  models.rs  routes.rs
morse-api/src/controllers/: auth_controller.rs  chat_controller.rs  mod.rs
morse-api/src/models/: api.rs  auth.rs  errors.rs  mod.rs  requests.rs  ws.rs
morse-api/src/models/api/: auth.rs  chat.rs  room.rs  status.rs  user.rs
morse-api/src/repositories/: mod.rs  room_repository.rs  user_repository.rs
morse-api/src/services/: authentication.rs  chat_service.rs  jwt_service.rs  mod.rs  user_service.rs  ws_service.rs
morse-mysql/: schema.sql
morse-web/: .dockerignore  Dockerfile  nginx.conf
morse-web/src/: chat.html  index.html  login.html
morse-web/src/css/: chat.css  login.css  main.css  navbar.css
morse-web/src/js/: auth.js  main.js  messages.js  notifications.js  rooms.js  sidebar.js  token.js  websocket.js
morse-web/tls/: TLS.md
