[package]
name = "morse-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "mysql"] }
idna = "=1.0.2" # Temporary fix for sqlx
tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3.7"
futures = { version = "0.3.31", default-features = false }
serde_json = "1.0.132"
